err2.txt
cargo : warning: unused 
import: 
`crate::function::Function`
At line:1 char:1
+ cargo check -p lune-roblox 
2>&1 | Out-File -FilePath 
err2.txt -Encodi ...
+ ~~~~~~~~~~~~~~~~~~~~~~~~~~~
~~~~
    + CategoryInfo           
   : NotSpecified: (warning  
  : unused...tion::Functio   
 n`:String) [], RemoteExc    
eption
    + FullyQualifiedErrorId  
   : NativeCommandError
 
 --> 
mlua-main\src\gc_api.rs:4:5
  |
4 | use 
crate::function::Function;
  |     
^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: 
`#[warn(unused_imports)]` 
(part of `#[warn(unused)]`) 
on by default

warning: unused import: 
`crate::value::Value`
 --> 
mlua-main\src\gc_api.rs:5:5
  |
5 | use crate::value::Value;
  |     ^^^^^^^^^^^^^^^^^^^

warning: `mlua` (lib) 
generated 2 warnings (run 
`cargo fix --lib -p mlua` to 
apply 2 suggestions)
    Checking lune-roblox 
v0.3.4 (C:\Users\Arch\Downloa
ds\lune-main\lune-main\crates
\lune-roblox)
error[E0277]: the trait 
bound `&std::string::String: 
mlua::IntoLua` is not 
satisfied
   --> crates\lune-roblox\src
\globals.rs:125:41
    |
125 |         let original: 
LuaValue = mt.get(&method)?;
    |                        
             --- ^^^^^^^ the 
trait `mlua::UserData` is 
not implemented for 
`&std::string::String`
    |                        
             |
    |                        
             required by a 
bound introduced by this call
    |
    = note: required for 
`&std::string::String` to 
implement `mlua::IntoLua`
note: required by a bound in 
`mlua::Table::get`
   --> C:\Users\Arch\Download
s\lune-main\lune-main\mlua-ma
in\src\table.rs:110:45
    |
110 |     pub fn get<V: 
FromLua>(&self, key: impl 
IntoLua) -> Result<V> {
    |                        
                     ^^^^^^^ 
required by this bound in 
`Table::get`
help: consider dereferencing 
here
    |
125 |         let original: 
LuaValue = mt.get(&*method)?;
    |                        
                  +

warning: unused variable: 
`dom`
   --> crates\lune-roblox\src
\instance\mod.rs:734:13
    |
734 |         let dom = INTER
NAL_DOM.lock().expect("Failed
 to lock document");
    |             ^^^ help: 
if this is intentional, 
prefix it with an 
underscore: `_dom`
    |
    = note: 
`#[warn(unused_variables)]` 
(part of `#[warn(unused)]`) 
on by default

warning: unused variable: 
`dom`
   --> crates\lune-roblox\src
\instance\mod.rs:741:13
    |
741 |         let dom = INTER
NAL_DOM.lock().expect("Failed
 to lock document");
    |             ^^^ help: 
if this is intentional, 
prefix it with an 
underscore: `_dom`

For more information about 
this error, try `rustc 
--explain E0277`.
warning: `lune-roblox` (lib) 
generated 2 warnings
error: could not compile 
`lune-roblox` (lib) due to 1 
previous error; 2 warnings 
emitted
